@@ -63,7 +63,12 @@ public final class VirtualMethod<C> {
   private final Class<C> baseClass;
   private final String method;
   private final Class<?>[] parameters;
-  private final WeakIdentityMap<Class<? extends C>, Integer> cache = WeakIdentityMap.newConcurrentHashMap(false);
+  private final ClassValue<Integer> distanceOfClass = new ClassValue<Integer>() {
+    @Override
+    protected Integer computeValue(Class<?> subclazz) {
+      return Integer.valueOf(reflectImplementationDistance(subclazz));
+    }
+  };
 
   /**
    * Creates a new instance for the given {@code baseClass} and method declaration.
@@ -92,12 +97,7 @@ public final class VirtualMethod<C> {
    * @return 0 iff not overridden, else the distance to the base class
    */
   public int getImplementationDistance(final Class<? extends C> subclazz) {
-    Integer distance = cache.get(subclazz);
-    if (distance == null) {
-      // we have the slight chance that another thread may do the same, but who cares?
-      cache.put(subclazz, distance = Integer.valueOf(reflectImplementationDistance(subclazz)));
-    }
-    return distance.intValue();
+    return distanceOfClass.get(subclazz).intValue();
   }
   
   /**
@@ -111,7 +111,7 @@ public final class VirtualMethod<C> {
     return getImplementationDistance(subclazz) > 0;
   }
   
-  private int reflectImplementationDistance(final Class<? extends C> subclazz) {
+  int reflectImplementationDistance(final Class<?> subclazz) {
     if (!baseClass.isAssignableFrom(subclazz))
       throw new IllegalArgumentException(subclazz.getName() + " is not a subclass of " + baseClass.getName());
     boolean overridden = false;
